@@ -25,5 +25,6 @@ setup(name='Products.LinguaPlone',
       install_requires=[
         'setuptools',
         'plone.browserlayer',
+        'plone.app.layout >=1.1.4dev-r21791',
       ],
 )
